added dice ex (with bonus)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input id="email" value="gino@boolean.com" type="email" class="form-control">
             <button id="emailButton" class="btn btn-primary mt-3">Accedi</button>
         </div>
-        <div class="text-info mt-3 fs-3" id="emailPlacer">
+        <div class="mt-3 fs-3 text-info" id="emailPlacer">
     
         </div>
 
