added Marco and event listener

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <img class="prof-img" src="https://ca.slack-edge.com/T91QPE3BP-U01Q36Q46T1-5e41478bf5ee-512" alt="Prof. Marco">
         </h1>
         <h6>Come funziona? Il computere estrarrà dude numeri casuali da 1 a 6, uno per te e uno per il Prof. Marco. <br> Chi ha il numero più alto vince!</h6>
-        <div id="dadiPlacer">
+        <button id="dadiButton" class="btn btn-primary mt-3">Gioca!</button>
+        <div id="dadiPlacer" class="mt-5 text-info">
             
         </div>
     </div>
